# syswatch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
packaging/: snapcraft.yaml  syswatch.1  syswatch.desktop
src/: app.rs  main.rs
src/collector/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
src/input/: mod.rs
src/ui/: braille.rs  mod.rs  theme.rs
src/ui/layout/: disk.rs  mod.rs  network.rs  overview.rs  processes.rs
src/ui/widgets/: cpu_widget.rs  gauge.rs  mem_widget.rs  mod.rs  status_bar.rs  tab_bar.rs  title_bar.rs
